--- a/ros_tutorial_topic/CMakeLists.txt
+++ b/ros_tutorial_topic/CMakeLists.txt
@@ -133,6 +133,7 @@ include_directories(
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
 add_executable(topic_publisher src/topic_publisher.cpp)
+add_executable(topic_subscriber src/topic_subscriber.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -149,6 +150,16 @@ add_dependencies(topic_publisher
 
 ## Specify libraries to link a library or executable target against
 target_link_libraries(topic_publisher
+  ${catkin_LIBRARIES}
+)
+
+add_dependencies(topic_subscriber
+  ${${PROJECT_NAME}_EXPORTED_TARGETS}
+  ${catkin_EXPORTED_TARGETS}
+)
+
+## Specify libraries to link a library or executable target against
+target_link_libraries(topic_subscriber
   ${catkin_LIBRARIES}
 )
 
